// Copyright © 2022 Bartłomiej Święcki (byo)
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = ".;protobuf";

// KeyInfo represents encryption key information
message KeyInfo {
  bytes key = 1;
}

// Entry represents a single entry of a directory
message Entrypoint {
  bytes blobName = 1;
  KeyInfo keyInfo = 2;
  string mimeType = 3;
  int64 notValidBeforeUnixMicro = 4;
  int64 notValidAfterUnixMicro = 5;
}

// Directory represents a content of a static directory
message Directory {
  map<string, Entrypoint> entries = 1;
}

// WriterInfo contains information that allows updating given blob
message WriterInfo {
  bytes blobName = 1;
  bytes key = 2;
  bytes authInfo = 3;
}
